generated/checkers/gen/AllGen-Uninit-Data-d313eb8b77557a6d5855f42d2234bd592c7b50dd/build_logs/syntax-repair-04/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘const clang::ento::VarRegion* {anonymous}::SAGenTestChecker::resolveBaseStructVarRegion(const clang::Expr*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:104:57: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::ento::MemRegion*> >::lookup_type’ {aka ‘const clang::ento::MemRegion* const*’} to ‘const clang::ento::MemRegion*’ in initialization
  104 |       const MemRegion *Aliased = State->get<PtrAliasMap>(VR);
      |                                  ~~~~~~~~~~~~~~~~~~~~~~~^~~~
      |                                                         |
      |                                                         clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::ento::MemRegion*> >::lookup_type {aka const clang::ento::MemRegion* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::isZeroingCall(const clang::ento::CallEvent&, unsigned int&, unsigned int&, unsigned int&, bool&, bool&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:208:89: error: base operand of ‘->’ has non-pointer type ‘clang::ento::ExprEngine’
  208 |   if (ExprHasName(Origin, "memset", Call.getState()->getStateManager().getOwningEngine()->getCheckerManager()->getContext()) ||
      |                                                                                         ^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:210:71: error: base operand of ‘->’ has non-pointer type ‘clang::ento::ExprEngine’
  210 |                   Call.getState()->getStateManager().getOwningEngine()->getCheckerManager()->getContext())) {
      |                                                                       ^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:220:71: error: base operand of ‘->’ has non-pointer type ‘clang::ento::ExprEngine’
  220 |                   Call.getState()->getStateManager().getOwningEngine()->getCheckerManager()->getContext())) {
      |                                                                       ^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:231:71: error: base operand of ‘->’ has non-pointer type ‘clang::ento::ExprEngine’
  231 |                   Call.getState()->getStateManager().getOwningEngine()->getCheckerManager()->getContext())) {
      |                                                                       ^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkBind(clang::ento::SVal, clang::ento::SVal, const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:309:61: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::ento::MemRegion*> >::lookup_type’ {aka ‘const clang::ento::MemRegion* const*’} to ‘const clang::ento::MemRegion*’ in initialization
  309 |       if (const MemRegion *Aliased = State->get<PtrAliasMap>(RHSVR)) {
      |                                      ~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
      |                                                             |
      |                                                             clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::ento::MemRegion*> >::lookup_type {aka const clang::ento::MemRegion* const*}
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
